Inspector is not showing the same as an actual device shows, so this is to check if a problem got fixed

--- a/style.css
+++ b/style.css
@@ -1776,7 +1776,7 @@ footer li {
 	} 
 
 	.sm-section-history {
-		height: 193vh;
+		height: 237vh;
 	}
 
 	.hero-learn-offset-5 {
